--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 </article>
             </a>
             <!--pickup3-->
-            <a href="">
+            <a href="https://rioken.github.io/-aesthetic_BLOOM/" target="_blank">
                 <article class="website">
                     <img src="common/img/BLOOM_pcデザイン-03.jpg" alt="">
                     <h2>
                         エステティックサイト
                     </h2>
-                    <a href="">
+                    <a href="https://rioken.github.io/-aesthetic_BLOOM/" target="_blank">
                         <p class="readmore">READ MORE</p>
                     </a>
                 </article>
