--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         </h1>
         <nav>
             <ul class="navlist">
-                <li><a href="">
-                        NEW</a>
+                <li><a href="#">
+                        Web</a>
                 </li>
-                <li><a href="">
-                        COLUMN</a>
+                <li><a href="#">
+                        Movie</a>
                 </li>
-                <li><a href="">
-                        SERIES</a>
+                <li><a href="#">
+                        Dtp</a>
                 </li>
-                <li><a href="">
+                <li><a href="#">
                         Q&A</a>
                 </li>
                 <li><a href="">
@@ -62,13 +62,13 @@
                 </article>
             </a>
             <!--pickup3-->
-            <a href="https://rioken.github.io/-aesthetic_BLOOM/" target="_blank">
+            <a href="">
                 <article class="website">
                     <img src="common/img/BLOOM_pcデザイン-03.jpg" alt="">
                     <h2>
                         エステティックサイト
                     </h2>
-                    <a href="https://rioken.github.io/-aesthetic_BLOOM/" target="_blank">
+                    <a href="https://rioken.github.io/-aesthetic_BLOOM/">
                         <p class="readmore">READ MORE</p>
                     </a>
                 </article>
@@ -80,14 +80,14 @@
                 <!--category1-->
                 <article>
                     <h4>
-                        動画１
+                        Movie1
                         </h2>
                         <ul class="leftcolumnday">
                             <li>
-                                2020/01/01
+                                2025/1/7
                             </li>
                             <li>
-                                カテゴリ1
+                                フェア告知動画
                             </li>
                         </ul>
                         <!--img src="common/img/pickup2.jpg" alt="" width="759px"-->
@@ -101,14 +101,14 @@
                 <!--category2-->
                 <article>
                     <h4>
-                        動画２
+                        Movie2
                         </h2>
                         <ul class="leftcolumnday">
                             <li>
-                                2020/01/01
+                                2025/2/28
                             </li>
                             <li>
-                                カテゴリ1
+                                商品紹介動画
                             </li>
                         </ul>
                         <!--mg src="common/img/pickup3.jpg" alt="" width="759px"-->
@@ -122,14 +122,14 @@
                 <!--category3-->
                 <article>
                     <h4>
-                        動画３
+                        Movie3
                         </h2>
                         <ul class="leftcolumnday">
                             <li>
-                                2020/01/01
+                                2025/3/7
                             </li>
                             <li>
-                                カテゴリ1
+                                展示会紹介動画
                             </li>
                         </ul>
                         <!--img src="common/img/pickup1.jpg" alt="" width="759px"-->
@@ -150,13 +150,14 @@
                     </h3>
                     <p>
                         ウェブデザイナー・コーダー / 動画クリエイター <br>
-                        ウェディング動画編集を5年勤務。その後グラフィックデザイナー件LP制作、オンラインショップ立ち上げ、運用保守も行う。動画制作はアフターエフェクツ使用のアニメ広告動画等も担当。 <br>
+                        ウェディング動画編集を5年勤務。その後グラフィックデザイナー件LP制作、オンラインショップ立ち上げ、運用保守も行いウェブ、グラフィックデザイン等にも制作範囲を広げる。動画制作はアフターエフェクツ使用のアニメ広告動画等も担当。
+                        <br>
                         プライベートでは小学生２人の母。北海道小樽市出身。
                     </p>
                 </section>
                 <section class="rankingarea">
                     <h3>
-                        グラフィックデザイン
+                        Graphic design
                     </h3>
                     <!--Ranking1-->
                     <article>
@@ -218,11 +219,28 @@
         <div class="footerbox aboutarea">
             <h3>About</h3>
             <p>
-       制作会社一覧
+                制作会社一覧
             </p>
-            <ul class="aboutlist">
+            <input id="block1" type="checkbox" class="toggle">
+            <label class="Label" for="block1">・株式会社XXXXX様</label>
+            <div class="content">
+                <p>〇〇年〇月〇日　展示会告知15秒動画制作<br>映像公開場所：<a
+                        href="https://ooh-portal.jp/property/%E3%82%B5%E3%83%B3%E3%82%B7%E3%83%A3%E3%82%A4%E3%83%B3%E3%83%93%E3%82%B8%E3%83%A7%E3%83%B3">池袋サンシャインビジョン</a>
+                </p>
+            </div>
+            <input id="block2" type="checkbox" class="toggle">
+            <label class="Label" for="block2">・株式会社XXXXX様</label>
+            <div class="content">
+                <p>〇〇年〇月〇日　ページ制作<br>公開サイト：<a href="https://www.paramount-careservice.jp/recruit/details/">採用ページ</a></p>
+            </div>
+            <input id="block3" type="checkbox" class="toggle">
+            <label class="Label" for="block3">・株式会社XXXXX様</label>
+            <div class="content">
+                <p>〇〇年〇月〇日　ページ制作<br>公開サイト：<a href="https://www.sanyei-ashiba.jp/shop/c/c60/">説明ページ</a></p>
+            </div>
+            <!--ul class="aboutlist">
                 <li class="triangle">
-                    <a href="#">株式会社XXXXX様</a>
+                    <a href="#">・株式会社XXXXX様</a>
                 </li>
                 <li class="triangle">
                     <a href="#">株式会社XXXXX様</a>
@@ -233,27 +251,27 @@
                 <li class="triangle">
                     <a href="#">株式会社XXXXX様</a>
                 </li>
-            </ul>
+            </ul-->
         </div>
         <div class="footerbox Menuarea">
             <h3>
                 Menu
             </h3>
             <ul class="menulist">
-                <li>
-                    NEW
+                <li><a href="">
+                    Web</a>
                 </li>
-                <li>
-                    CATEGORY
+                <li><a href="">
+                    Movie</a>
                 </li>
-                <li>
-                    CATEGORY
+                <li><a href="">
+                    Dtp</a>
                 </li>
-                <li>
-                    SERIES
+                <li><a href="">
+                    Q&A</a>
                 </li>
-                <li>
-                    Q&A
+                <li><a href="">
+                    CONTACT</a>
                 </li>
             </ul>
         </div>
@@ -261,14 +279,11 @@
             <h3>
                 Twitter
             </h3>
-            <div class="twitter">
-                <a class="twitter-timeline" href="https://twitter.com/kodamari3?ref_src=twsrc%5Etfw">Tweets by
-                    kodamari3</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
+            <a class="twitter-timeline" href="https://twitter.com/kodamari3?ref_src=twsrc%5Etfw">Tweets by kodamari3</a>
         </div>
     </footer>
     <script src="common/js/script.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 
 </html>
