--- a/index.html
+++ b/index.html
@@ -259,31 +259,32 @@
             </h3>
             <ul class="menulist">
                 <li><a href="">
-                    Web</a>
+                        Web</a>
                 </li>
                 <li><a href="">
-                    Movie</a>
+                        Movie</a>
                 </li>
                 <li><a href="">
-                    Dtp</a>
+                        Dtp</a>
                 </li>
                 <li><a href="">
-                    Q&A</a>
+                        Q&A</a>
                 </li>
                 <li><a href="">
-                    CONTACT</a>
+                        CONTACT</a>
                 </li>
             </ul>
         </div>
         <div class="footerbox twitterarea">
-            <h3>
-                Twitter
-            </h3>
-            <a class="twitter-timeline" href="https://twitter.com/kodamari3?ref_src=twsrc%5Etfw">Tweets by kodamari3</a>
+            <h3>SNS</h3>
+            <ul class="snsarea">
+                <li><a href=""><img src="common/img/Instagram_Glyph_Gradient.png" alt="" width="50px"></a></li>
+                <li><a href=""><img src="common/img/LINE_APP_iOS.png" alt="" width="50px"></a></li>
+                <li><a href=""><img src="common/img/logo-black.png" alt="" width="50px"></a></li>
+            </ul>
         </div>
     </footer>
     <script src="common/js/script.js"></script>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 
 </html>
