--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         美容室サイト
                     </h2>
                     <a href="https://leleaf.staba.jp/" target="_blank">
-                        <p class="readmore">READ MORE</p>
+                        <p class="readmore">VIEW MORE</p>
                     </a>
                 </article>
             </a>
@@ -69,7 +69,7 @@
                         エステティックサイト
                     </h2>
                     <a href="https://rioken.github.io/-aesthetic_BLOOM/">
-                        <p class="readmore">READ MORE</p>
+                        <p class="readmore">VIEW MORE</p>
                     </a>
                 </article>
             </a>
@@ -94,7 +94,7 @@
                         <video controls width="759px">
                             <source src="common/img/haikyu.mp4">
                         </video>
-                        <p class="readmore">READ MORE</p>
+                        <p class="readmore">VIEW MORE</p>
                         </a>
 
                 </article>
