--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="common/css/style.css">
     <link rel="stylesheet" href="common/css/style_sp.css">
+    <link rel="icon" href="common/img/favicon.ico">
     <title>bportfolio</title>
 </head>
 
@@ -15,7 +16,7 @@
         </h1>
         <nav>
             <ul class="navlist">
-                <li><a href="#">
+                <li><a href="web.html">
                         Web</a>
                 </li>
                 <li><a href="#">
@@ -57,7 +58,7 @@
                         ワードプレスサイト
                     </h2>
                     <a href="https://atelierkotoni.com/" target="_blank">
-                        <p class="readmore">READ MORE</p>
+                        <p class="readmore">VIEW MORE</p>
                     </a>
                 </article>
             </a>
@@ -90,12 +91,10 @@
                                 フェア告知動画
                             </li>
                         </ul>
-                        <!--img src="common/img/pickup2.jpg" alt="" width="759px"-->
                         <video controls width="759px">
                             <source src="common/img/haikyu.mp4">
                         </video>
-                        <p class="readmore">VIEW MORE</p>
-                        </a>
+                        <!--p class="readmore">READ MORE</p-->
 
                 </article>
                 <!--category2-->
@@ -115,8 +114,7 @@
                         <video controls width="759px">
                             <source src="common/img/【フェア動画】鋼の錬金術師ver.2_5.mp4">
                         </video>
-                        <p class="readmore">READ MORE</p>
-                        </a></a>
+                        <!--p class="readmore">READ MORE</p-->
 
                 </article>
                 <!--category3-->
@@ -136,8 +134,7 @@
                         <video controls width="759px">
                             <source src="common/img/lovekive.mp4">
                         </video>
-                        <p class="readmore">READ MORE</p>
-                        </a>
+                        <!--p class="readmore">READ MORE</p-->
 
                 </article>
             </div>
@@ -258,7 +255,7 @@
                 Menu
             </h3>
             <ul class="menulist">
-                <li><a href="">
+                <li><a href="web.html">
                         Web</a>
                 </li>
                 <li><a href="">
