--- a/web.html
+++ b/web.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1><img src="common/img/portfolio.svg" style="max-width: 145px; height: auto;">
+        <a href="index.html"><h1><img src="common/img/portfolio.svg" style="max-width: 145px; height: auto;"></a>
         </h1>
         <nav>
             <ul class="navlist">
@@ -124,7 +124,7 @@
             </article>
             <!--pickup3_bloom-->
             <article class="website">
-                <img src="common/img/BLOOM_pcデザイン-03.jpg" alt="">
+                <a href="https://rioken.github.io/-aesthetic_BLOOM/"  target="_blank"><img src="common/img/BLOOM_pcデザイン-03.jpg" alt=""></a>
                 <h2>
                     美容クリニックサイト
                     <div class="color_btn">
