--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <header>
-        <h1><img src="common/img/portfolio.svg" style="max-width: 145px; height: auto;">
+        <a href="index.html">
+            <h1><img src="common/img/portfolio.svg" style="max-width: 145px; height: auto;">
+        </a>
         </h1>
         <nav>
             <ul class="navlist">
@@ -44,9 +46,6 @@
                     <h2>
                         美容室サイト
                     </h2>
-                    <a href="https://leleaf.staba.jp/" target="_blank">
-                        <p class="readmore">VIEW MORE</p>
-                    </a>
                 </article>
             </a>
             </article>
@@ -57,22 +56,21 @@
                     <h2>
                         ワードプレスサイト
                     </h2>
-                    <a href="https://atelierkotoni.com/" target="_blank">
-                        <p class="readmore">VIEW MORE</p>
-                    </a>
                 </article>
             </a>
             <!--pickup3-->
-            <a href="">
-                <article class="website">
-                    <img src="common/img/BLOOM_pcデザイン-03.jpg" alt="">
-                    <h2>
-                        エステティックサイト
-                    </h2>
-                    <a href="https://rioken.github.io/-aesthetic_BLOOM/">
-                        <p class="readmore">VIEW MORE</p>
-                    </a>
-                </article>
+            <article class="website">
+                <a href="https://rioken.github.io/-aesthetic_BLOOM/" target="_blank"><img
+                        src="common/img/BLOOM_pcデザイン-03.jpg" alt=""></a>
+                <h2>
+                    エステティックサイト
+                </h2>
+            </article>
+        </div>
+        <!--viewmore_btn-->
+        <div>
+            <a href="web.html" target="_blank">
+                <p class="readmore">VIEW MORE</p>
             </a>
         </div>
         <div class="twocolumnarea">
