--- a/index.html
+++ b/index.html
@@ -5,37 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="common/css/style.css">
-    <link rel="stylesheet" href="common/css/style_sp.css">
+    <!--link rel="stylesheet" href="common/css/style_sp.css"-->
     <link rel="icon" href="common/img/favicon.ico">
-    <title>bportfolio</title>
+    <title>portfolio</title>
 </head>
 
 <body>
-    <header>
-        <a href="index.html">
-            <h1><img src="common/img/portfolio.svg" style="max-width: 145px; height: auto;">
-        </a>
-        </h1>
-        <nav>
-            <ul class="navlist">
-                <li><a href="web.html">
-                        Web</a>
-                </li>
-                <li><a href="#">
-                        Movie</a>
-                </li>
-                <li><a href="#">
-                        Dtp</a>
-                </li>
-                <li><a href="#">
-                        Q&A</a>
-                </li>
-                <li><a href="">
-                        CONTACT</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <!--header_insertAdjacentHTML-->
+    <div id="header"></div>
+    <!--main-->
     <main class="container">
         <!--pickuparea-->
         <div class="pickuparea">
@@ -83,9 +61,6 @@
                         </h2>
                         <ul class="leftcolumnday">
                             <li>
-                                2025/1/7
-                            </li>
-                            <li>
                                 フェア告知動画
                             </li>
                         </ul>
@@ -101,9 +76,6 @@
                         Movie2
                         </h2>
                         <ul class="leftcolumnday">
-                            <li>
-                                2025/2/28
-                            </li>
                             <li>
                                 商品紹介動画
                             </li>
@@ -121,9 +93,6 @@
                         Movie3
                         </h2>
                         <ul class="leftcolumnday">
-                            <li>
-                                2025/3/7
-                            </li>
                             <li>
                                 展示会紹介動画
                             </li>
@@ -145,7 +114,7 @@
                     </h3>
                     <p>
                         ウェブデザイナー・コーダー / 動画クリエイター <br>
-                        ウェディング動画編集を5年勤務。その後グラフィックデザイナー件LP制作、オンラインショップ立ち上げ、運用保守も行いウェブ、グラフィックデザイン等にも制作範囲を広げる。動画制作はアフターエフェクツ使用のアニメ広告動画等も担当。
+                        ウェディング動画会社を5年勤務。その後ほぼ独学でパッケージデザインや、オンラインショップ立ち上げ、運用保守も行いウェブ、グラフィックデザイン等にも制作範囲を広げる。動画制作はアフターエフェクツでのアニメーション動画等も可能。
                         <br>
                         プライベートでは小学生２人の母。北海道小樽市出身。
                     </p>
@@ -210,75 +179,10 @@
             </aside>
         </div>
     </main>
-    <footer class="footerarea">
-        <div class="footerbox aboutarea">
-            <h3>About</h3>
-            <p>
-                制作会社一覧
-            </p>
-            <input id="block1" type="checkbox" class="toggle">
-            <label class="Label" for="block1">・株式会社XXXXX様</label>
-            <div class="content">
-                <p>〇〇年〇月〇日　展示会告知15秒動画制作<br>映像公開場所：<a
-                        href="https://ooh-portal.jp/property/%E3%82%B5%E3%83%B3%E3%82%B7%E3%83%A3%E3%82%A4%E3%83%B3%E3%83%93%E3%82%B8%E3%83%A7%E3%83%B3">池袋サンシャインビジョン</a>
-                </p>
-            </div>
-            <input id="block2" type="checkbox" class="toggle">
-            <label class="Label" for="block2">・株式会社XXXXX様</label>
-            <div class="content">
-                <p>〇〇年〇月〇日　ページ制作<br>公開サイト：<a href="https://www.paramount-careservice.jp/recruit/details/">採用ページ</a></p>
-            </div>
-            <input id="block3" type="checkbox" class="toggle">
-            <label class="Label" for="block3">・株式会社XXXXX様</label>
-            <div class="content">
-                <p>〇〇年〇月〇日　ページ制作<br>公開サイト：<a href="https://www.sanyei-ashiba.jp/shop/c/c60/">説明ページ</a></p>
-            </div>
-            <!--ul class="aboutlist">
-                <li class="triangle">
-                    <a href="#">・株式会社XXXXX様</a>
-                </li>
-                <li class="triangle">
-                    <a href="#">株式会社XXXXX様</a>
-                </li>
-                <li class="triangle">
-                    <a href="#">株式会社XXXXX様</a>
-                </li>
-                <li class="triangle">
-                    <a href="#">株式会社XXXXX様</a>
-                </li>
-            </ul-->
-        </div>
-        <div class="footerbox Menuarea">
-            <h3>
-                Menu
-            </h3>
-            <ul class="menulist">
-                <li><a href="web.html">
-                        Web</a>
-                </li>
-                <li><a href="">
-                        Movie</a>
-                </li>
-                <li><a href="">
-                        Dtp</a>
-                </li>
-                <li><a href="">
-                        Q&A</a>
-                </li>
-                <li><a href="">
-                        CONTACT</a>
-                </li>
-            </ul>
-        </div>
-        <div class="footerbox twitterarea">
-            <h3>SNS</h3>
-            <ul class="snsarea">
-                <li><a href=""><img src="common/img/Instagram_Glyph_Gradient.png" alt="" width="50px"></a></li>
-                <li><a href=""><img src="common/img/LINE_APP_iOS.png" alt="" width="50px"></a></li>
-                <li><a href=""><img src="common/img/logo-black.png" alt="" width="50px"></a></li>
-            </ul>
-        </div>
-    </footer>
+    <!-- -footer_insertAdjacentHTML -->
+    <div id="footer"></div>
+    <!-- js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="common/js/script.js"></script>
 </body>
 
