--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             </li>
                         </ul>
                         <video controls width="759px">
-                            <source src="common/img/haikyu.mp4">
+                            <source src="common/img/movie/haikyu.mp4">
                         </video>
                         <!--p class="readmore">READ MORE</p-->
 
@@ -82,7 +82,7 @@
                         </ul>
                         <!--mg src="common/img/pickup3.jpg" alt="" width="759px"-->
                         <video controls width="759px">
-                            <source src="common/img/【フェア動画】鋼の錬金術師ver.2_5.mp4">
+                            <source src="common/img/movie/【フェア動画】鋼の錬金術師ver.2_5.mp4">
                         </video>
                         <!--p class="readmore">READ MORE</p-->
 
@@ -99,7 +99,7 @@
                         </ul>
                         <!--img src="common/img/pickup1.jpg" alt="" width="759px"-->
                         <video controls width="759px">
-                            <source src="common/img/lovekive.mp4">
+                            <source src="common/img/movie/lovekive.mp4">
                         </video>
                         <!--p class="readmore">READ MORE</p-->
 
