--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,12 @@
                     フォーム入力
             </div>
             <div class="step_block step2">
-                <p>STEP2<br>
-                    入力内容確認</p>
+                STEP2<br>
+                    入力内容確認
             </div>
             <div class="step_block step3">
-                <p>STEP3<br>
-                    お問合せ完了</p>
+                STEP3<br>
+                    お問合せ完了
             </div>
         </div>
         <!-- 送信完了画面 -->
@@ -102,6 +102,7 @@
     <div id="footer"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="common/js/contact.js"></script>
+    <script src="common/js/script.js"></script>
 </body>
 
 </html>
