--- a/header.html
+++ b/header.html
@@ -22,7 +22,7 @@
                 <li><a href="web.html">
                         Web</a>
                 </li>
-                <li><a href="movie.html">
+                <li><a href="/BLOG/movie.htm">
                         Movie</a>
                 </li>
                 <li><a href="#">
