--- a/footer.html
+++ b/footer.html
@@ -71,16 +71,16 @@
                 <li><a href="web.html">
                         Web</a>
                 </li>
-                <li><a href="">
+                <li><a href="movie.html">
                         Movie</a>
                 </li>
                 <li><a href="">
                         Dtp</a>
                 </li>
-                <li><a href="">
+                <li><a href="question.html">
                         Q&A</a>
                 </li>
-                <li><a href="">
+                <li><a href="contact.html">
                         CONTACT</a>
                 </li>
             </ul>
