--- a/movie.html
+++ b/movie.html
@@ -19,6 +19,7 @@
         <!--movie-->
         <div class="pickup_block">
             <h5>movie<span>動画制作</span></h5>
+            <!--pickuparea1-->
             <div class="pickuparea">
                 <!--pickup1-->
                 <article class="website">
@@ -132,6 +133,122 @@
                     </div>
                 </article>
             </div>
+            <!--pickuparea2-->
+            <div class="pickuparea">
+                <!--pickup1-->
+                <article class="website">
+                    <video controls="" width="350px">
+                        <source src="common/img/movie/iruma.mp4">
+                    </video>
+                    <h2>
+                        店舗内動画
+                    </h2>
+                    <!--Accordion_menu-->
+                    <div>
+                        <div class="explanation-open">作業担当</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>構成・編集</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open">動画の目的</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>アニメイト池袋内の画廊に設置されたモニターに流す動画</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open">配信媒体</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>店舗内ミニター</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open">動画について</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>池袋アニメイト内のデジタル画廊Gallery D.N.A.が少し寂しいとの事で大型モニター用の動画作成を致しました。キャラクター全員のカラーで背景は先生の描き下ろしイラストを使用させて頂きました。
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <!--pickup2-->
+                <article class="website">
+                    <!--video controls="" width="350px">
+                        <source src="common/img/movie/【フェア動画】鋼の錬金術師ver.2_5.mp4">
+                    </video-->
+                    <img src="https://placehold.jp/30px/c9c9c9/ffffff/340x246.png?text=coming%20soon" alt="">
+                    <h2>
+                        アニメグッズフェア開催の宣伝動画
+                    </h2>
+                    <!--アコーディオンメニュー-->
+                    <div>
+                        <div class="explanation-open click-open active">作業担当</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>構成・編集</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open click-open active">動画の目的</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>グッズ販売用の宣伝動画</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open click-open active">配信媒体</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>店舗内デジタルサイネージ・X・店舗ミニター</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open click-open active">動画について</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>ホストの華やかさを引き立てるようにキャラクターネームにはレトロで気品あるデザインを書き、光り輝く演出を致しました。
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <!--pickup3-->
+                <article class="website">
+                    <!--video controls="" width="350px">
+                        <source src="common/img/movie/lovekive.mp4">
+                    </video-->
+                     <img src="https://placehold.jp/30px/c9c9c9/ffffff/340x246.png?text=coming%20soon" alt="">
+                    <h2>
+                        展示会宣伝動画
+                    </h2>
+                    <!--アコーディオンメニュー-->
+                    <div>
+                        <div class="explanation-open click-open active">作業担当</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>構成・編集</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open click-open active">動画の目的</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>アニメフェア用の動画</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open click-open active">配信媒体</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>公式X</p>
+                            </li>
+                        </ul>
+                        <div class="explanation-open click-open active">動画について</div>
+                        <ul class="Accordion">
+                            <li>
+                                <p>合宿メンバーとの事で音楽も楽し気なものを使用し動きのある演出を作成致しました。
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
         </div>
         <!--SNS_design-->
         <div class="pickup_block">
@@ -176,7 +293,7 @@
                 </article>
                 <!--pickup2_nursery_school-->
                 <article class="website">
-                     <video controls="" width="350px">
+                    <video controls="" width="350px">
                         <source src="common/img/movie/ゆったり大き目靴下動画2.mp4">
                     </video>
                     <h2>
